# boxxy

./: .gitignore  .ignore  BOXXY_ROSETTA2_AND_BOOT_COMPARISON.md  CAPABILITY_PIPELINE_COMPLETE.md  FINAL_SUMMARY.md  HOF_CUE_JOKER_INTEGRATION.md  ISABELLE_BUILD_GUIDE.md  ISABELLE_COMPILATION_STATUS.md  ISABELLE_WEB_GUIDE.md  Makefile  PHASE5_RUNTIME_BRIDGE.md  PROJECT_COMPLETION_FINAL.md  README.md  README_SEL4_INTEGRATION.md  RUNNABLE_DEMONSTRATIONS.md  SEL4_INTEGRATION_SUMMARY.md  SEL4_PARALLELISM_TEST_REPORT.md  SEL4_RESEARCH_DATA_SUMMARY.md  SEL4_STRESS_TEST_REPORT.md  SESSION_COMPLETION_SUMMARY.md  SIMS_PARSER_SUMMARY.md  SPI-RACE.md  TESTING_SEL4_WITH_BOXXY.md  TIMELOCK_PROOF_CERTIFICATE.md  VIBESNIPE_EXECUTION_REPORT.md  aellith-tile.bb  go.mod  go.sum  hof.cue  hof.joker  hof_cue_joker_example.cue  hof_joker_examples.clj  hof_joker_test.clj  hof_test.go  isabelle-codegen.joke  macos-on-external.joke  passport-gay-arena.org  sel4-parallel-test.nu  spell_boolean_flags.edn  spell_boolean_flags.json  (+3 more)
.flox/: env.json
.pijul/: config
.topos/: joker_patterns.duckdb  joker_patterns.jsonl
_darcs/: hashed_inventory  index.old  tentative_pristine
docs/: AFP_INTEGRATION_PLAN.md  AGM_POSTULATE_MAP.md  BOXXY_TLDRAW_LIFECYCLE.md  CANONICAL_RESEARCH.md  COMPLETION_STATUS.md  CRITICAL_SORRY_QUICK_START.md  DARCS.md  EXECUTION_STATUS.md  GAY_COLOR_CHAIN_DISCOVERY.md  GROVE_PROOF_STRATEGY.md  HAIKU-ARM64-STATUS.md  IMPLEMENTATION_GUIDE.md  MULTIPLAYER_BCI_WORLDING.md  PROOF_INDEX.md  PROOF_MAP.md  (+6 more)
polyglot/rust/: Cargo.toml
polyglot/rust/src/: catclad.rs  main.rs
(+269 files in other folders)
